# huifi-app

./: .gitignore  .prettierignore  1  2  Anchor.toml  README.md  Web3_ROSCA_Slides.pptx  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
anchor/: Anchor.toml  package-lock.json  pnpm-lock.yaml  tsconfig.json
anchor/src/: huifidapp-exports.ts  index.ts
app/: .gitignore  Huifi-app.txt  README.md  Solana Document.txt  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
app/anchor/: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
app/anchor/programs/contracts-hui/: Cargo.toml  contracts-hui.rar
app/anchor/programs/contracts-hui/src/: constants.rs  errors.rs  lib.rs  na.rs
app/anchor/programs/contracts-hui/src/instructions/: collateral.rs  contribution.rs  cycle_management.rs  mod.rs  payout.rs  pool.rs
app/anchor/programs/contracts-hui/src/state/: member.rs  mod.rs  pool.rs  protocol.rs
app/anchor/tests/: contracts-hui.ts  huifidapp.spec.ts
app/src/anchor/: Anchor.toml  Cargo.toml
app/src/app/: ToasterProvider.tsx  globals.css  layout.tsx  page.tsx
app/src/components/: CTASection.tsx  CollateralManagement.tsx  FeaturesSection.tsx  HeroSection.tsx  HowItWorksSection.tsx  PoolCard.tsx  PoolDetailComponent.tsx  PoolFilterBar.tsx  PoolManagement.tsx  StatsSection.tsx
app/src/contexts/: TransactionContext.tsx
contracts-hui/: .gitignore  Anchor.toml
contracts-hui/tests/: contracts-hui.ts
programs/contracts-hui/: Cargo.toml
shared/idl/: contracts_hui.json
(+126 files in other folders)
