[package]
name = "contracts-hui"
version = "0.1.0"
description = "HuiFi - Solana Rotating Savings Smart Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "contracts_hui"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
solana-program = "2.1.0"
thiserror = "1.0.40"

